// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders buttons without crashing 1`] = `
<button
  className="btn"
/>
`;

exports[`renders buttons without crashing 2`] = `
<button
  className="btn btn-success"
/>
`;

exports[`renders buttons without crashing 3`] = `
<button
  className="btn btn-danger"
/>
`;
